PluggableAuthService historic changes
=====================================


PluggableAuthService 1.4 (2006-08-28)
-------------------------------------

- Extended the DomainAuthHelper to function as its own extraction
  plugin, to allow for the case that another extractor is registered,
  but does not return any credentials.
  (http://www.zope.org/Collectors/PAS/46)

- Re-worded parts of the README so they don't point to specific or 
  non-existing files (http://www.zope.org/Collectors/PAS/6 and
  http://www.zope.org/Collectors/PAS/47)


PluggableAuthService 1.4-beta (2006-08-07)
------------------------------------------

- Created a "Configured PAS" entry in the ZMI add list, which
  allows creating a PAS using base and extension GenericSetup profiles
  registered for IPluggableAuthService.  This entry should eventually
  replace the "stock" PAS entry (assuming that we make GenericSetup
  a "hard" dependency).

- Added an "empty" GenericSetup profile, which creates a PAS containing
  only a plugin registry and a setup tool.

- Repaired the "simple" GenericSetup profile to be useful, rather than
  catastrophic, to apply:  it now creates and registers a set of
  ZODB-based user / group / role plugins, along with a basic auth
  helper.

- ZODBUserManager: Extend the "notional IZODBUserManager interface"
  with the left-out updateUser facility and a corresponding
  manage_updateUser method for ZMI use. Removed any responsibility
  for updating a user's login from the updateUserPassword and
  manage_updateUserPassword methods. This fixes the breakage
  described in the collector issue below, and makes the ZMI view
  for updating users work in a sane way.
  (http://www.zope.org/Collectors/PAS/42)

- CookieAuthHelper: If expireCookie was called and extractCredentials
  was hit in the same request, the CookieAuthHelper would throw an
  exception (http://www.zope.org/Collectors/PAS/43)

- Added a DEPENDENCIES.txt. (http://www.zope.org/Collectors/PAS/44)

