@@ -17,8 +17,6 @@
 $Id$
 """
 
-from zExceptions import Unauthorized
-
 from AccessControl.SecurityInfo import ClassSecurityInfo
 from App.class_init import default__class_init__ as InitializeClass
 
@@ -99,15 +97,9 @@ class HTTPBasicAuthHelper( BasePlugin ):
         """
         realm = response.realm
         if realm:
-            response.addHeader('WWW-Authenticate',
+            response.setHeader('WWW-Authenticate',
                                'basic realm="%s"' % realm)
         m = "<strong>You are not authorized to access this resource.</strong>"
-        if response.debug_mode:
-            if response._auth:
-                m = m + '<p>\nUsername and password are not correct.'
-            else:
-                m = m + '<p>\nNo Authorization header found.'
-
         response.setBody(m, is_error=1)
         response.setStatus(401)
         return 1
